changed mailto address
address change

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="social-icon soft-neu-circle-out" href="https://www.instagram.com/adriaaanncso/"target="_blank"><i class="fab fa-instagram heading-black" target="_blank"></i></a>
                         <a class="social-icon soft-neu-circle-out" href="https://www.facebook.com/profile.php?id=100001670550607" target="_blank"><i class="fab fa-facebook-f heading-black"></i></a>
                         <a class="social-icon soft-neu-circle-out" href="https://twitter.com/adriannnc2_" target="_blank"><i class="fab fa-twitter heading-black"></i></a>
-                        <a class="social-icon soft-neu-circle-out" href="mailto:adrian.carlo.enciso@informatics.edu.ph"><i class="fas fa-envelope heading-black"></i></a>
+                        <a class="social-icon soft-neu-circle-out" href="mailto:aadrian11eenciso@gmail.com"><i class="fas fa-envelope heading-black"></i></a>
                     </div>
                 </div>
             </section>
