Temporarily removed   capstone projects tab
details will be added soon

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link text-secondary" id="neu-button-3" data-bs-toggle="pill" data-bs-target="#tab-3" type="button" role="tab" aria-controls="tab-3" aria-selected="false">Graphic Design | Other Projects</button>
                               </li>
-                            <li class="nav-item" role="presentation">
+<!--                             <li class="nav-item" role="presentation">
                               <button class="nav-link text-secondary" id="neu-button-4" data-bs-toggle="pill" data-bs-target="#tab-4" type="button" role="tab" aria-controls="tab-4" aria-selected="false">Capstone Projects</button>
-                            </li>
+                            </li> -->
                         </ul>
                        
                     </div>
