--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="subheading mb-4">
                         4<sup>th</sup> Year BSIT Major in Multimedia Arts Student. Informatics College Manila
                     </div>
-                    <hr class="rounded bar yl-or">
+                    <hr class="rounded bar yl-or gradient-animate">
                     <p class="lead mb-5">Hello! I am Adrian Enciso, I am an Information Technology Major in Multimedia Arts student, and here is my simple web portfolio that I am keen on improving over the duration of my career, this is made using a Bootstrap framework theme that I modified to utilize the responsive layout, I do not take credit for the general responsive layout of this page, but I added my own personal CSS experiments to differentiate it among others. 
                     </p>
                     <div class="social-icons">
@@ -62,7 +62,7 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-4 heading-title ">My Key Skills</h2>
-                    <hr class="bar rounded gr-cy">
+                    <hr class="bar rounded gr-cy gradient-animate">
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -105,7 +105,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-4 heading-title">My Interests</h2>
-                    <hr class="bar rounded fs-pr">
+                    <hr class="bar rounded fs-pr gradient-animate">
                     <p class="mb-0 lead">
                         During my free time, I tend to enjoy just thinking silently, other than that, I also have other hobbies, I tend to like to tinker with things when something is broken, I learned soldering at a young age, and I honestly think that it allowed me to further try out more things other than just sitting in front of a computer, I also play the ukulele, I’d admit that I’m not that good with it, but I found it relaxing and enjoyable when I play it.
                         <br><br>
@@ -119,7 +119,7 @@
             <section class="resume-section py-0" id="works1">
                 <div class="resume-section-content">
                     <h2 class="mb-2 heading-title">Projects</h2>
-                    <hr class="bar rounded lb-id">
+                    <hr class="bar rounded lb-id gradient-animate">
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-0">
                         
                         <ul class="nav nav-neu mb-3 " id="pills-tab" role="tablist">
