file extension fixes

--- a/index.html
+++ b/index.html
@@ -323,12 +323,12 @@
 										</div>
 										<div class="col-lg-4 col-xl-4 col-md-4 col-xs-12">
 											<div class="square hover-effect m-1">
-												<img src="assets/img/photography/DSC_0121.jpg" alt="Image" />
+												<img src="assets/img/photography/DSC_0121.JPG" alt="Image" />
 											</div>
 										</div>
 										<div class="col-lg-4 col-xl-4 col-md-4 col-xs-12">
 											<div class="square hover-effect m-1">
-												<img src="assets/img/photography/meow.jpg" />
+												<img src="assets/img/photography/meow.JPG" />
 											</div>
 										</div>
 										<div class="col-lg-4 col-xl-4 col-md-4 col-xs-12">
