extension fix part 2

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 										</div>
 										<div class="col-lg-4 col-xl-4 col-md-4 col-xs-12">
 											<div class="square hover-effect m-1">
-												<img src="assets/img/photography/meow.JPG" />
+												<img src="assets/img/photography/meow.jpg" />
 											</div>
 										</div>
 										<div class="col-lg-4 col-xl-4 col-md-4 col-xs-12">
