--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 					<div class="subheading mb-4">
 						4<sup>th</sup> Year BSIT Major in Multimedia Arts Student. Informatics
 						College Manila
+						<br />
+						Software Engineering Intern
 					</div>
 					<hr class="rounded bar yl-or gradient-animate" />
 					<p class="lead mb-5">
