--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						4<sup>th</sup> Year BSIT Major in Multimedia Arts Student. Informatics
 						College Manila
 						<br />
-						Software Engineering Intern
+						<span class="fw-light"> Software Engineering Intern </span>
 					</div>
 					<hr class="rounded bar yl-or gradient-animate" />
 					<p class="lead mb-5">
