--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
 					<div class="subheading mb-4">
 						4<sup>th</sup> Year BSIT Major in Multimedia Arts Student. Informatics
 						College Manila
-						<br />
-						<span class="fw-light"> Software Engineering Intern </span>
+					
+						
 					</div>
+					<h6 class="fw-light"> Software Engineering Intern </h6>
 					<hr class="rounded bar yl-or gradient-animate" />
 					<p class="lead mb-5">
 						Hello! I am Adrian Enciso, I am an Information Technology Major in
