--- a/index.html
+++ b/index.html
@@ -82,13 +82,11 @@
 				<div class="resume-section-content">
 					<h1 class="mb-0 heading-name">Adrian Enciso</h1>
 
-					<div class="subheading mb-4">
+					<div class="subheading mb-2">
 						4<sup>th</sup> Year BSIT Major in Multimedia Arts Student. Informatics
 						College Manila
-					
-						
 					</div>
-					<h6 class="fw-light"> Software Engineering Intern </h6>
+					<h6 class="fw-light text-secondary"> Software Engineering Intern </h6>
 					<hr class="rounded bar yl-or gradient-animate" />
 					<p class="lead mb-5">
 						Hello! I am Adrian Enciso, I am an Information Technology Major in
