--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						4<sup>th</sup> Year BSIT Major in Multimedia Arts Student. Informatics
 						College Manila
 					</div>
-					<h6 class="fw-light text-secondary"> Software Engineering Intern </h6>
+					<h6 class="fw-lighter text-secondary"> Software Engineering Intern </h6>
 					<hr class="rounded bar yl-or gradient-animate" />
 					<p class="lead mb-5">
 						Hello! I am Adrian Enciso, I am an Information Technology Major in
