--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 					<h1 class="mb-0 heading-name">Adrian Enciso</h1>
 
 					<div class="subheading mb-2">
-						4<sup>th</sup> Year BSIT Major in Multimedia Arts Student. Informatics
+						BSIT Major in Multimedia Arts Student. Informatics
 						College Manila
 					</div>
-					<h6 class="fw-lighter text-secondary"> Software Engineering Intern </h6>
+					<p class="fw-lighter text-secondary"> Software Engineering Intern </p>
 					<hr class="rounded bar yl-or gradient-animate" />
 					<p class="lead mb-5">
 						Hello! I am Adrian Enciso, I am an Information Technology Major in
