--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<h1 class="mb-0 heading-name">Adrian Enciso</h1>
 
 					<div class="subheading mb-2">
-						BSIT Major in Multimedia Arts Student. Informatics
+						BSIT Major in Multimedia Arts. Informatics
 						College Manila
 					</div>
 					<p class="fw-lighter text-secondary"> Software Engineering Intern </p>
