--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						BSIT Major in Multimedia Arts. Informatics
 						College Manila
 					</div>
-					<p class="fw-lighter text-secondary"> Software Engineering Intern </p>
+					<p class="fw-lighter text-secondary">Junior Software Developer</p>
 					<hr class="rounded bar yl-or gradient-animate" />
 					<p class="lead mb-5">
 						Hello! I am Adrian Enciso, I am an Information Technology Major in
