--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
 		<link href="css/styles.css" rel="stylesheet" />
 	</head>
 	<body id="page-top">
+		<div class="toplayer bg-red w-100">
+			<div class="alert alert-dark alert-dismissible fade show mb-3" role="alert">
+				This portfolio is best viewed via a desktop browser.
+
+				<button
+					id="closeAlert"
+					type="button"
+					class="btn-close"
+					data-bs-dismiss="alert"
+					aria-label="Close"
+				></button>
+			</div>
+		</div>
 		<!-- Navigation-->
 		<nav
 			class="navbar navbar-expand-lg navbar-dark bg-mn-gray fixed-top"
