--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
 	</head>
 	<body id="page-top">
 		<div class="toplayer bg-red w-100">
-			<div class="alert alert-dark alert-dismissible fade show mb-3" role="alert">
-				This portfolio is best viewed via a desktop browser.
-
+			<div
+				id="alert-initial"
+				class="alert alert-dark alert-dismissible fade show mb-3"
+				role="alert"
+			>
+				<span id="alertContent"></span>
 				<button
 					id="closeAlert"
 					type="button"
@@ -931,7 +934,8 @@
 		</div>
 		<!-- Bootstrap core JS-->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-		<!-- Core theme JS-->
+		<!-- JS Scripts -->
 		<script src="js/scripts.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.5/mobile-detect.min.js"></script>
 	</body>
 </html>
