--- a/index.html
+++ b/index.html
@@ -936,6 +936,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 		<!-- JS Scripts -->
 		<script src="js/scripts.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.5/mobile-detect.min.js"></script>
+		<script src="=js/mobile-detect.min.js"></script>
 	</body>
 </html>
