--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
 										</div>
 										<div class="col-lg-4 col-xl-4 col-md-4 col-xs-12">
 											<div class="square hover-effect m-1">
-												<img src="assets/img/photography/IMG_5473.JPG" />
+												<img src="assets/img/photography/kb2k21.png" />
 											</div>
 										</div>
 										<div class="col-lg-4 col-xl-4 col-md-4 col-xs-12">
