--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 				></button>
 			</div>
 		</div>
+
 		<!-- Navigation-->
 		<nav
 			class="navbar navbar-expand-lg navbar-dark bg-mn-gray fixed-top"
@@ -953,7 +954,16 @@
 			<!-- Skills-->
 
 			<hr class="m-0" />
-
+			<div class="float-bug">
+				<div class="contained-icon">
+					<a
+						id="forceExec"
+						class="text-decoration-none text-mn-gray"
+						href="redir.html"
+						><i class="fa fa-bug"></i
+					></a>
+				</div>
+			</div>
 			<!-- Awards-->
 		</div>
 		<!-- Bootstrap core JS-->
