--- a/redir.html
+++ b/redir.html
@@ -32,7 +32,7 @@
 						</h4>
 						<h5>
 							If you call a support person, give them this info: <br />Stop Code: 420
-							JS_NOT_ENABLED
+							<span id="stopText">JS_NOT_ENABLED</span>
 						</h5>
 					</div>
 				</div>
