--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
 					<div class="subheading mb-2 gradient-animate">
 						BSIT Major in Multimedia Arts. Informatics College Manila
 					</div>
-					<span class="badge rounded-pill bl-gr"> Junior Software Developer </span>
+					<span class="badge rounded-pill bl-gr"> Junior Software Engineer </span>
 					<hr class="rounded bar yl-or gradient-animate" />
 					<p class="lead mb-5">
-						Currently working as a junior software developer for a company that
-						specializes on enterprise solutions/applications.
+						Currently a part of a team that specializes on enterprise
+						solutions/applications.
 						<br />
 					</p>
 					<div class="social-icons">
@@ -404,12 +404,9 @@
 
 					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
 						<div class="flex-grow-1">
-							<h3 class="mb-2">Junior Software Developer</h3>
-							<div class="subheading mb-1">[Under Probation]</div>
-							<p>
-								My current job as a junior software developer, I primarily focus on
-								enterprise solutions/applications.
-							</p>
+							<h3 class="mb-2">Software Engineer I</h3>
+							<div class="subheading mb-1">*</div>
+							<p>My current job as a junior software engineer.</p>
 						</div>
 						<div class="flex-shrink-0">
 							<span class="text-mn-gray">January 2022 - Present</span>
