transition to wip mode

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<!-- Page Content-->
 		<div class="container-fluid p-0 bg-broken-white">
 			<!-- About-->
-			<section class="resume-section" id="main">
+			<section class="resume-section blur-lite" id="main">
 				<div class="resume-section-content">
 					<h1 id="myName" class="mb-0 heading-name">
 						<span id="text-container"></span><span id="caret"></span>
@@ -129,7 +129,7 @@
 					<div class="subheading mb-2 gradient-animate">
 						BSIT Major in Multimedia Arts. Informatics College Manila
 					</div>
-					<span class="badge rounded-pill bl-gr"> Junior Software Engineer </span>
+					<span class="badge rounded-pill bl-gr"> Software Engineer </span>
 					<hr class="rounded bar yl-or gradient-animate" />
 					<p class="lead mb-5">
 						Currently a part of a team that specializes on enterprise
@@ -170,7 +170,7 @@
 				</div>
 			</section>
 			<hr class="m-0" />
-			<section class="resume-section-full" id="about">
+			<section class="resume-section-full blur-lite" id="about">
 				<div class="resume-section-content w-100">
 					<h2 class="mb-0 heading-name full-offset">About Me</h2>
 					<p class="lead mb-5 full-offset"></p>
@@ -202,7 +202,7 @@
 			</section>
 			<hr class="m-0" />
 			<!-- Experience-->
-			<section class="resume-section" id="skills">
+			<section class="resume-section blur" id="skills">
 				<div class="resume-section-content">
 					<h2 class="mb-4 heading-title">Skills</h2>
 					<hr class="bar rounded gr-cy gradient-animate" />
@@ -390,7 +390,7 @@
 			</section>
 			<hr class="m-0" />
 			<!-- Interests-->
-			<section class="resume-section" id="experience">
+			<section class="resume-section blur-lite" id="experience">
 				<div class="resume-section-content">
 					<h2 class="mb-4 heading-title">Experience</h2>
 					<hr class="bar rounded fs-pr gradient-animate" />
@@ -486,7 +486,7 @@
 		-->
 			<hr class="m-0" />
 			<!-- Creations-->
-			<section class="resume-section py-0" id="works1">
+			<section class="resume-section py-0 blur" id="works1">
 				<div class="resume-section-content">
 					<h2 class="mb-2 heading-title">Projects</h2>
 					<div class="subheading">(Multimedia)</div>
